[gd_scene load_steps=4 format=3 uid="uid://cls61iu0c4bjv"]

[ext_resource type="Script" uid="uid://dxdus1laaqkvf" path="res://script/door.gd" id="1_script"]
[ext_resource type="ArrayMesh" uid="uid://baq031uau3eku" path="res://assets/ushobj/ushobj.obj" id="2_mesh"]

[sub_resource type="BoxShape3D" id="BoxShape_door"]
size = Vector3(1.5, 2.5, 0.2)

[node name="Door" type="StaticBody3D"]
script = ExtResource("1_script")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4764113, 0)
mesh = ExtResource("2_mesh")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
shape = SubResource("BoxShape_door")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0.5)
shape = SubResource("BoxShape_door")

[node name="Label3D" type="Label3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
billboard = 1
text = "Precisa de uma chave"
outline_size = 8

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_exited"]
